# Resume-Shortlisting-System

./: README.md  REQUIREMENTS.txt  app.py  database.py  document_parser.py  file_storage.py  groq_processor.py  matching_engine.py  nlp_processor.py  pdf_parser.py  pyproject.toml  resume_system.db  utils.py
