[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "fitz>=0.0.1.dev2",
    "groq>=0.25.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pymupdf>=1.26.0",
    "python-docx>=1.1.2",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.7",
    "streamlit>=1.45.1",
]
